# go-score-counter

./: .gitmodules  CMakeLists.txt  README.md  run.sh  test.sh
imgui/: CMakeLists.txt
lib/: CMakeLists.txt  go_board.cpp  go_board.h  go_board_test.cpp
src/: CMakeLists.txt  application.cpp  application.h  go_score_counter.cpp
src/assets/: go-stone.aseprite
